configs/cluster/server_rbac.yaml
# Namespace where the tispace server and instances are created.
apiVersion: v1
kind: Namespace
metadata:
  name: tispace
kind: ServiceAccount
apiVersion: v1
metadata:
  name: server
  namespace: tispace
