configs/cluster/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tispace
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
      - name: backend
        image: tispace/backend:latest
        imagePullPolicy: IfNotPresent
        workingDir: /workdir
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: workdir
          mountPath: /workdir
        - mountPath: /etc/tispace
          name: lxd-client-cert
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: backend
      - name: lxd-client-cert
        secret:
          defaultMode: 420
          secretName: lxd-client-cert
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: tispace
  labels:
    app: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
