configs/cluster/server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: tispace
  labels:
    app: server
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: server
  type: NodePort
